settings to deploy

--- a/back-end/Institute/appsettings.json
+++ b/back-end/Institute/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=institutBD;Username=postgres;Password=1111"
+    "DefaultConnection": "Host=ep-patient-sunset-a8gplt2i-pooler.eastus2.azure.neon.tech;Database=neondb;Username=neondb_owner;Password=npg_93UFVDcHrtIO;SSL Mode=Require;Trust Server Certificate=true"
   }
 }
