--- a/back-end/Institute/fly.toml
+++ b/back-end/Institute/fly.toml
@@ -3,7 +3,7 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'institute-restless-flower-67'
+app = 'crm-system-institute'
 primary_region = 'otp'
 
 [build]
