--- a/.github/workflows/DeploytoFlyio.yml
+++ b/.github/workflows/DeploytoFlyio.yml
@@ -9,6 +9,7 @@ jobs:
     deploy-backend:
         name: Deploy Backend (.NET)
         runs-on: ubuntu-latest
+        environment: production
         steps:
             - name: Checkout repo
               uses: actions/checkout@v3
@@ -26,6 +27,7 @@ jobs:
     deploy-frontend:
         name: Deploy Frontend (React)
         runs-on: ubuntu-latest
+        environment: production
         steps:
             - name: Checkout repo
               uses: actions/checkout@v3
